--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Segoe UI", Helvetica, Arial, sans-serif;
-  background: var(--bg-secondary);
+  /* background: var(--bg-secondary); */
 }
 
 html {
