--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,6 +1,6 @@
 .home {
     min-height: 100vh;
-    background: var(--bg-secondary);
+    background-color: var(--bg-secondary) !important;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
